<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/widget_background"
    android:clickable="true">

    <!-- Top right refresh icon -->
    <!--ImageView
        android:id="@+id/refresh"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.75"
        android:contentDescription="@string/refresh"
        android:padding="2dp"
        android:src="@drawable/ic_refresh" /-->

    <!-- Battery percentage -->
    <TextView
        android:id="@+id/appwidget_battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="-0.03" />

    <!-- Range -->
    <TextView
        android:id="@+id/appwidget_battery_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appwidget_battery_level"
        android:layout_marginTop="-4dp"
        android:text="@string/km"
        android:textColor="#D0D0D0"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium" />

    <!-- Charging status -->
    <LinearLayout
        android:id="@+id/charging_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appwidget_battery_autonomy"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/appwidget_battery_charging_dot"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/charging_dot"
            android:src="@drawable/charging_dot" />

        <TextView
            android:id="@+id/appwidget_battery_charging_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charging"
            android:textColor="#7CFF8B"
            android:textSize="13sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium" />
    </LinearLayout>

    <!-- Charging details -->
    <TextView
        android:id="@+id/appwidget_battery_charging_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/charging_container"
        android:layout_marginTop="3dp"
        android:text="@string/_0_min_0_kw"
        android:textColor="#A8A8A8"
        android:textSize="12sp"
        android:visibility="visible"
        android:fontFamily="sans-serif" />

    <!-- Last updated -->
    <TextView
        android:id="@+id/appwidget_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/empty_time"
        android:textColor="#707070"
        android:textSize="9sp"
        android:fontFamily="sans-serif"
        tools:ignore="SmallSp" />

</RelativeLayout>